Fix z-index of back button

--- a/game/css/stylesheet.css
+++ b/game/css/stylesheet.css
@@ -62,6 +62,7 @@ body {
 
 .button {
 
+    z-index: 11;
     border-style: solid;
     border-width: 4px;
     border-radius: 4px;
